# read_pdf_table

./: OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  README.md  app.py  main.py  packages.txt  pyproject.toml  quick_test.py  requirements.txt  test_app.py  test_performance.py
.github/: copilot-instructions.md
.streamlit/: config.toml
