[project]
name = "read-pdf-table"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf>=1.26.6",
    "camelot-py>=0.11.0",
    "pandas>=2.0.0",
    "opencv-python>=4.8.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "tqdm>=4.66.0",
]
